adjusted letterhead and fixed spacing issue

--- a/css/style.css
+++ b/css/style.css
@@ -56,8 +56,8 @@ header a{
 
 #header-navi-title img{
   width: 100%;
-  max-width: 800px;
-  max-height: 800px;
+  max-width: 50%;
+  max-height: 50%;
   display: block;
   margin-left: auto;
   margin-right: auto;
